<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.androidtraining.kathmandu.view.MainActivity">


    <Button
        android:id="@+id/btn_goToLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_linearlayout" />

    <Button
        android:id="@+id/btn_GoToRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_relativelayout" />

    <Button
        android:id="@+id/btn_goToContraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_constraintlayout" />
</LinearLayout>
